fix user page boxes alignment

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -17,7 +17,7 @@ small {
 
 .right {
 	width: 200px;
-	float: right;
+	float: left;
 }
 
 .navi {
